added race related frontend changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Turbo Race Insights</title>
   </head>
   <body>
     <div id="root"></div>
